--- a/bundle/index.html
+++ b/bundle/index.html
@@ -115,6 +115,7 @@
 				<div class="carousel__wrapper">
 					<div class="carousel__img-block">
 						<img class="carousel__img" src="img/arch/castles/1.jpg" alt="N-ский замок">
+						<img class="carousel__img" src="img/arch/castles/1.jpg" alt="N-ский замок">
 					</div>
 					<div class="carousel__progress emphasis">
 						<span class="position">1</span>/<span class="of">2</span>
