don't test and deploy

--- a/bundle/index.html
+++ b/bundle/index.html
@@ -122,7 +122,10 @@
 					</div>
 					<div class="carousel__controls-block emphasis">
 						<span class="carousel__next"><a href="#"><img src="img/sprite.png" alt="Previous"></a></span>
-						<span><span class="carousel__title">Название проекта</span></span>
+						<span>
+							<span class="carousel__title">Название проекта</span>
+							<span class="carousel__title">Название проекта</span>
+						</span>
 						<span class="carousel__prev"><a href="#"><img src="img/sprite.png" alt="Next"></a></span>
 					</div>
 				</div>
